# PRPG

./: CHANGELOG.md  LICENSE  LICENSE.txt  ONBOARDING.md  README.md  part-00001-path-P000051-P000100.csv  pyproject.toml
configs/: canonical.yaml  seed-registry.yaml  smoke.yaml  v5-canonical.yaml  v5-configured-example-seeds.yaml  v5-configured-example.yaml  v5-seed-registry.yaml
doc/: PRPG-plan.md  PRPG-technical-design-and-implementation-log.md  PRPG-v5-historical-vs-simulated-summary.md  PRPG-v5-user-and-maintenance-guide.md
evidence/v5/: v5-k4-month-assignments-be5df93d382a.csv  v5-k4-owner-review-be5df93d382a.md
examplePath/: part-00000-path-P000001-P000050.csv  part-00001-path-P000051-P000100.csv
examplePath/annual/: part-00000-path-P000001-P000050.csv
reports/: v5-historical-vs-simulated-summary.json
scripts/: build_final_delivery.py  build_v5_comparison_report.py  run_v3_g3_rehearsal.py  v11_k4_support_diagnostic.py  verify_final_delivery.py
src/prpg/: __init__.py  cli.py  config.py  errors.py  execution.py  g3_launch.py  provenance.py
src/prpg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/unit/: conftest.py  test_adequacy.py  test_adequacy_execution.py  test_adequacy_gate.py  test_alpha.py  test_benchmarks.py  test_block_execution.py  test_block_execution_registered.py  test_block_length.py  test_bootstrap.py  test_bridge.py  test_bridge_driver.py  test_bridge_fixed_k.py  test_bridge_history.py  test_bridge_selection.py  test_calendar.py  test_calibration.py  test_calibration_identity.py  test_candidate_fixed_point_execution.py  test_candidate_gate.py  test_candidate_scientific_failures.py  test_cli.py  test_config.py  test_csv_storage.py  test_data_pipeline.py  test_data_snapshot.py  test_data_snapshot_negative.py  test_dependence.py  test_dependence_execution.py  test_dependence_gate_execution.py  test_errors.py  test_execution.py  test_fixed_point.py  test_g3.py  test_g3_artifact_handoff.py  test_g3_assembly.py  test_g3_boundary_views.py  test_g3_checkpoint.py  (+74 more)
(+117 files in other folders)
